updated mastodon site URL to show as verified on my profile. Also maybe fixed mobile layout

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Jay's Website</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="https://unpkg.com/98.css@0.1.17/dist/98.css" />
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/98.css@0.1.17/dist/98.css"/>
 </head>
 <body>
 <div>
@@ -46,7 +46,7 @@
                     <li>Table of Contents</li>
                     <li>Where to find me:</li>
                     <ul>
-                        <li><img src="images/mastodon.ico"><a href="https://mastodon.jemverse.xyz/@Jemma"> @jemma@mastodon.jemverse.xyz</a></li>
+                        <li><img src="images/mastodon.ico"><a rel="me" href="https://mastodon.jemverse.xyz/@Jemma"> @jemma@mastodon.jemverse.xyz</a></li>
                         <li><img src="images/matrix.ico"><a href="https://matrix.to/#/@jemma:jemverse.xyz"> @jemma@jemverse.xyz</a></li>
                         <li><img src="images/twitter.ico"><a href="https://twitter.com/JayDaBirb"> @JayDaBirb</a></li>
                         <li><img src="images/discord.ico"><a> Jemma#6508</a></li>
