--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul class="tree-view">
                     <img class="user-icon" src="images/usericon.jpg">
                     <p>Howdy! My name is Jemma, I'm a 3rd year computer science student at the <b><a href="https://uwplatt.edu/">University of Wisconsin: Platteville</a></b></p>
-                    <p>I'm a software researcher and backend developer. I specialize in the development of dynamic web applications and the reverse engineering of niche applications.</p>
+                    <p>I'm a software researcher and backend developer. I specialize in the development of dynamic web apps and the reverse engineering of niche applications.</p>
 
                 </ul>
                 <br>
@@ -55,12 +55,32 @@
                     <ul>
                         <li><img src="images/file.ico"><a rel="me" href="files/Resume.pdf"> Resume</a></li>
                         <li><img src="images/email.ico"><a href="mailto:poffinbargej@uwplatt.edu"> Email</a></li>
-                        <li><img src="images/mastodon.ico"><a rel="me" href="https://mastodon.jemverse.xyz/@Jemma"> @jemma@mastodon.jemverse.xyz</a></li>
+                        <li><img src="images/mastodon.ico"><a rel="me" href="https://mastodon.jemverse.xyz/@Jemma"> @Jemma@mastodon.jemverse.xyz</a></li>
                         <!--<li><img src="images/matrix.ico"><a href="https://matrix.to/#/@jemma:jemverse.xyz"> @jemma@jemverse.xyz</a></li>-->
                         <li><img src="images/twitter.ico"><a href="https://twitter.com/JemTanuki"> @JemTanuki</a></li>
+                        <li><img src="images/telegram.ico"><a href="https://t.me/JemTanuki"> @JemTanuki</a></li>
                         <li><img src="images/discord.ico"><a> Jemma#6508</a></li>
                         <li><img src="images/github.ico"><a href="https://github.com/CaramelKat"> CaramelKat</a></li>
                     </ul>
+                </ul>
+            </div>
+        </div>
+        <br>
+        <div class="window" id="projects">
+            <div class="title-bar">
+                <a href="files/Resume.pdf" target="_blank">
+                    <div class="title-bar-text">
+                        Hire me ;).gif
+                    </div>
+                </a>
+                <div class="title-bar-controls">
+                    <button aria-label="Minimize"></button>
+                    <button aria-label="Maximize"></button>
+                    <button aria-label="Close"></button>
+                </div>
+            </div>
+            <div class="window-body">
+                <ul class="tree-view">
                     <li>Projects I'm working on:</li>
                     <li>
                         <details open>
@@ -77,6 +97,24 @@
                             <ul>
                                 <li>PWA for a scout camp with an interactive map, and information about areas and events</li>
                                 <li><b>HTMl / CSS / PWA</b></li>
+                            </ul>
+                        </details>
+                    </li>
+                    <li>
+                        <details open>
+                            <summary><img src="images/tanuki.ico"><a href="https://github.com/CaramelKat/Tanukis-Stash" target="_blank"> <b>Tanuki's Stash</b></a></summary>
+                            <ul>
+                                <li>A e621/e926 client for iOS</li>
+                                <li><b>Swift / SwiftUI</b></li>
+                            </ul>
+                        </details>
+                    </li>
+                    <li>
+                        <details open>
+                            <summary><img src="images/caramel.ico"><a href="https://github.com/CaramelKat/caramelbot3.0" target="_blank"> <b>Caramel Bot</b></a></summary>
+                            <ul>
+                                <li>Basic no nonsense Discord bot</li>
+                                <li><b>NodeJS / Discord.js / MongoDB</b></li>
                             </ul>
                         </details>
                     </li>
@@ -109,6 +147,7 @@
     dragElement(document.getElementById('hello'))
     dragElement(document.getElementById('about'))
     dragElement(document.getElementById('cool'))
+    dragElement(document.getElementById('projects'))
 
     function dragElement(elmnt) {
         var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
