Updated email address

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li>Where to find me:</li>
                     <ul>
                         <li><img src="images/file.ico"><a rel="me" href="files/Resume.pdf"> Resume</a></li>
-                        <li><img src="images/email.ico"><a href="mailto:poffinbargej@uwplatt.edu"> Email</a></li>
+                        <li><img src="images/email.ico"><a href="mailto:jemma@jemsoftware.dev"> Email</a></li>
                         <li><img src="images/mastodon.ico"><a rel="me" href="https://mastodon.jemverse.xyz/@Jemma"> @Jemma@mastodon.jemverse.xyz</a></li>
                         <!--<li><img src="images/matrix.ico"><a href="https://matrix.to/#/@jemma:jemverse.xyz"> @jemma@jemverse.xyz</a></li>-->
                         <li><img src="images/twitter.ico"><a href="https://twitter.com/JemTanuki"> @JemTanuki</a></li>
