--- a/index.html
+++ b/index.html
@@ -4,184 +4,68 @@
     <meta charset="UTF-8">
     <title>Jem's Website</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://unpkg.com/98.css@0.1.17/dist/98.css"/>
 </head>
 <body>
-<div>
-    <div>
-        <div class="window" id="hello">
-            <div class="title-bar">
-                <div class="title-bar-text">
-                    Hello World!
-                </div>
-
-                <div class="title-bar-controls">
-                    <button aria-label="Minimize"></button>
-                    <button aria-label="Maximize"></button>
-                    <button aria-label="Close"></button>
-                </div>
-            </div>
-            <div class="window-body">
-                <p>Welcome to my website! I'm still building this sorry it's a mess lmao</p>
-                <section class="field-row" style="justify-content: flex-end">
-                    <button>Cool</button>
-                    <button>Lame</button>
-                </section>
-            </div>
-        </div>
-        <br>
-        <div class="window" id="about">
-            <div class="title-bar">
-                <div class="title-bar-text">
-                    Who am I?
-                </div>
-
-                <div class="title-bar-controls">
-                    <button aria-label="Minimize"></button>
-                    <button aria-label="Maximize"></button>
-                    <button aria-label="Close"></button>
-                </div>
-            </div>
-            <div class="window-body">
-                <ul class="tree-view">
-                    <img class="user-icon" src="images/usericon.jpg">
-                    <p>Howdy! My name is Jemma, I'm a 3rd year computer science student at the <b><a href="https://uwplatt.edu/">University of Wisconsin: Platteville</a></b></p>
-                    <p>I'm a software researcher and backend developer. I specialize in the development of dynamic web apps and the reverse engineering of niche applications.</p>
-
-                </ul>
-                <br>
-                <ul class="tree-view">
-                    <li>Where to find me:</li>
-                    <ul>
-                        <li><img src="images/file.ico"><a rel="me" href="files/Resume.pdf"> Resume</a></li>
-                        <li><img src="images/email.ico"><a href="mailto:jemma@jemsoftware.dev"> Email</a></li>
-                        <li><img src="images/mastodon.ico"><a rel="me" href="https://mastodon.jemverse.xyz/@Jemma"> @Jemma@mastodon.jemverse.xyz</a></li>
-                        <!--<li><img src="images/matrix.ico"><a href="https://matrix.to/#/@jemma:jemverse.xyz"> @jemma@jemverse.xyz</a></li>-->
-                        <li><img src="images/twitter.ico"><a href="https://twitter.com/JemTanuki"> @JemTanuki</a></li>
-                        <li><img src="images/telegram.ico"><a href="https://t.me/JemTanuki"> @JemTanuki</a></li>
-                        <li><img src="images/discord.ico"><a> Jemma#6508</a></li>
-                        <li><img src="images/github.ico"><a href="https://github.com/CaramelKat"> CaramelKat</a></li>
-                    </ul>
-                </ul>
-            </div>
-        </div>
-        <br>
-        <div class="window" id="projects">
-            <div class="title-bar">
-                <a href="files/Resume.pdf" target="_blank">
-                    <div class="title-bar-text">
-                        Hire me ;).gif
-                    </div>
-                </a>
-                <div class="title-bar-controls">
-                    <button aria-label="Minimize"></button>
-                    <button aria-label="Maximize"></button>
-                    <button aria-label="Close"></button>
-                </div>
-            </div>
-            <div class="window-body">
-                <ul class="tree-view">
-                    <li>Projects I'm working on:</li>
-                    <li>
-                        <details open>
-                            <summary><img src="images/pretendo.ico"><a href="https://pretendo.network/" target="_blank"> Pretendo Network</a></summary>
-                            <ul>
-                                <li>Open source replacement for the Nintendo Network on the 3DS and Wii U</li>
-                                <li><b>HTMl / CSS / NodeJS / MongoDB</b></li>
-                            </ul>
-                        </details>
-                    </li>
-                    <li>
-                        <details open>
-                            <summary><img src="images/tesomas.ico"><a href="https://tesomas.camp" target="_blank"> <b>Tesomas.Camp</b></a></summary>
-                            <ul>
-                                <li>PWA for a scout camp with an interactive map, and information about areas and events</li>
-                                <li><b>HTMl / CSS / PWA</b></li>
-                            </ul>
-                        </details>
-                    </li>
-                    <li>
-                        <details open>
-                            <summary><img src="images/tanuki.ico"><a href="https://github.com/CaramelKat/Tanukis-Stash" target="_blank"> <b>Tanuki's Stash</b></a></summary>
-                            <ul>
-                                <li>A e621/e926 client for iOS</li>
-                                <li><b>Swift / SwiftUI</b></li>
-                            </ul>
-                        </details>
-                    </li>
-                    <li>
-                        <details open>
-                            <summary><img src="images/caramel.ico"><a href="https://github.com/CaramelKat/caramelbot3.0" target="_blank"> <b>Caramel Bot</b></a></summary>
-                            <ul>
-                                <li>Basic no nonsense Discord bot</li>
-                                <li><b>NodeJS / Discord.js / MongoDB</b></li>
-                            </ul>
-                        </details>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <br>
-        <div class="window" id="cool">
-            <div class="title-bar">
-                <a href="files/Resume.pdf" target="_blank">
-                    <div class="title-bar-text">
-                        Hire me ;).gif
-                    </div>
-                </a>
-                <div class="title-bar-controls">
-                    <button aria-label="Minimize"></button>
-                    <button aria-label="Maximize"></button>
-                    <button aria-label="Close"></button>
-                </div>
-            </div>
-            <div class="window-body">
-                <a href="files/Resume.pdf" target="_blank">
-                    <img src="images/cool.gif">
-                </a>
+    <header>
+        <b>Jemma Poffinbarger</b>
+        <a href="#">Home</a>
+        <a href="#about-me">About Me</a>
+        <a href="#my-projects">Projects</a>
+        <a href="#contact-me">Contact me</a>
+        <a href="90s.html">Old School Mode</a>
+    </header>
+    <div class="background-stripe">
+        <div id="about-me">
+        <h2>About Me</h2>
+        <div class="content">
+            <img class="user-icon" src="https://www.github.com/caramelkat.png">
+            <div class="description">
+                <p>
+                    Howdy! My name is Jemma, I'm a full stack developer currently attending the <b><a href="https://uwplatt.edu/"> University of Wisconsin: Platteville.</a></b>
+                    Most of my work consists of the revese engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.
+                    <br><br>
+                    While most of my work is with web applications, I have experience developing for iOS, Android, Windows, and more.
+                </p>
             </div>
         </div>
     </div>
-</div>
-<script>
-    dragElement(document.getElementById('hello'))
-    dragElement(document.getElementById('about'))
-    dragElement(document.getElementById('cool'))
-    dragElement(document.getElementById('projects'))
-
-    function dragElement(elmnt) {
-        var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
-        if (elmnt.children[0].classList.contains('title-bar')) {
-            elmnt.children[0].onmousedown = dragMouseDown;
-        } else {
-            elmnt.onmousedown = dragMouseDown;
-        }
-
-        function dragMouseDown(e) {
-            e = e || window.event;
-            e.preventDefault();
-            pos3 = e.clientX;
-            pos4 = e.clientY;
-            document.onmouseup = closeDragElement;
-            document.onmousemove = elementDrag;
-        }
-
-        function elementDrag(e) {
-            e = e || window.event;
-            e.preventDefault();
-            pos1 = pos3 - e.clientX;
-            pos2 = pos4 - e.clientY;
-            pos3 = e.clientX;
-            pos4 = e.clientY;
-            elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
-            elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
-        }
-
-        function closeDragElement() {
-            document.onmouseup = null;
-            document.onmousemove = null;
-        }
-    }
-</script>
+    </div>
+    <div id="my-projects">
+        <h2>My Projects</h2>
+        <div class="content">
+            <div class="project" onclick="location.href='https://Pretendo.Network'">
+            <h3>Pretendo Network</h3>
+            <div>
+                <h4>Open source replacement for the Nintendo Network on the 3DS and Wii U</h4>
+                <img src="images/pretendo.png">
+            </div>
+            <h4><b>HTML / CSS / NodeJS / MongoDB</b></h4>
+        </div>
+        <div class="project" onclick="location.href='https://Tesomas.Camp'">
+            <h3>Tesomas.Camp</h3>
+            <div>
+                <h4>PWA for a scout camp with an interactive map, and information about areas and events</h4>
+                <img src="images/tesomas.png">
+            </div>
+            <h4><b>HTMl / CSS / PWA</b></h4>
+        </div>
+        <div class="project" onclick="location.href='https://www.github.com/caramelkat/tanukis-stash'">
+            <h3>Tanuki's Stash</h3>
+            <div>
+                <h4>A e621/e926 client for iOS</h4>
+                <img src="images/tanuki.png">
+            </div>
+            <h4><b>Swift / SwiftUI</b></h4>
+        </div>
+        <div class="project" onclick="location.href='https://www.github.com/caramelkat/caramelbot3.0'">
+            <h3>Caramel Bot</h3>
+            <div>
+                <h4>Basic no nonsense Discord bot</h4>
+                <img src="images/caramel.png">
+            </div>
+            <h4><b>NodeJS / Discord.js / MongoDB</b></h4>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
