Added contact me section, fixed typos, cleaned up css, added dark mode

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Jem's Website</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v5/font/simple-icons.min.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -13,6 +14,7 @@
         <a href="#about-me">About Me</a>
         <a href="#my-projects">Projects</a>
         <a href="#contact-me">Contact me</a>
+        <a href="files/Resume.pdf">Resume</a>
         <a href="90s.html">Old School Mode</a>
     </header>
     <div class="background-stripe">
@@ -21,9 +23,10 @@
         <div class="content">
             <img class="user-icon" src="https://www.github.com/caramelkat.png">
             <div class="description">
+                <h2>Howdy! My name is Jemma!</h2>
                 <p>
-                    Howdy! My name is Jemma, I'm a full stack developer currently attending the <b><a href="https://uwplatt.edu/"> University of Wisconsin: Platteville.</a></b>
-                    Most of my work consists of the revese engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.
+                    I'm a full-stack developer currently attending the <b><a href="https://uwplatt.edu/"> University of Wisconsin: Platteville.</a></b>
+                    Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.
                     <br><br>
                     While most of my work is with web applications, I have experience developing for iOS, Android, Windows, and more.
                 </p>
@@ -33,40 +36,62 @@
     </div>
     <div id="my-projects">
         <h2>My Projects</h2>
+        <h4>Some of my Recent Work</h4>
         <div class="content">
             <div class="project" onclick="location.href='https://Pretendo.Network'">
             <h3>Pretendo Network</h3>
             <div>
                 <h4>Open source replacement for the Nintendo Network on the 3DS and Wii U</h4>
-                <img src="images/pretendo.png">
+                <img src="images/pretendo.png" alt="">
             </div>
             <h4><b>HTML / CSS / NodeJS / MongoDB</b></h4>
-        </div>
-        <div class="project" onclick="location.href='https://Tesomas.Camp'">
-            <h3>Tesomas.Camp</h3>
-            <div>
-                <h4>PWA for a scout camp with an interactive map, and information about areas and events</h4>
-                <img src="images/tesomas.png">
             </div>
-            <h4><b>HTMl / CSS / PWA</b></h4>
-        </div>
-        <div class="project" onclick="location.href='https://www.github.com/caramelkat/tanukis-stash'">
-            <h3>Tanuki's Stash</h3>
-            <div>
-                <h4>A e621/e926 client for iOS</h4>
-                <img src="images/tanuki.png">
+            <div class="project" onclick="location.href='https://Tesomas.Camp'">
+                <h3>Tesomas.Camp</h3>
+                <div>
+                    <h4>Progressive Web App for a scout camp with an interactive map, information about activities, and more.</h4>
+                    <img src="images/tesomas.png" alt="">
+                </div>
+                <h4><b>HTMl / CSS / PWA</b></h4>
             </div>
-            <h4><b>Swift / SwiftUI</b></h4>
-        </div>
-        <div class="project" onclick="location.href='https://www.github.com/caramelkat/caramelbot3.0'">
-            <h3>Caramel Bot</h3>
-            <div>
-                <h4>Basic no nonsense Discord bot</h4>
-                <img src="images/caramel.png">
+            <div class="project" onclick="location.href='https://www.github.com/caramelkat/tanukis-stash'">
+                <h3>Tanuki's Stash</h3>
+                <div>
+                    <h4>A e621/e926 client for iOS</h4>
+                    <img src="images/tanuki.png" alt="">
+                </div>
+                <h4><b>Swift / SwiftUI</b></h4>
             </div>
-            <h4><b>NodeJS / Discord.js / MongoDB</b></h4>
+            <div class="project" onclick="location.href='https://www.github.com/caramelkat/caramelbot3.0'">
+                <h3>Caramel Bot</h3>
+                <div>
+                    <h4>Basic no nonsense Discord bot</h4>
+                    <img src="images/caramel.png" alt="">
+                </div>
+                <h4><b>NodeJS / Discord.js / MongoDB</b></h4>
+            </div>
         </div>
+        <a href="https://www.github.com/caramelkat">View More Projects on GitHub -></a>
+    </div>
+    <div class="background-stripe">
+        <div id="contact-me">
+        <h2>Contact Me</h2>
+        <h4>Wanna get in touch or talk business?</h4>
+        <div class="content">
+            <button class="cashapp" onclick="location.href='https://cash.app/$JemTanuki'"><span class="si si-cashapp"></span><span>Cash App</span></button>
+            <button class="kofi" onclick="location.href='https://ko-fi.com/jemtanuki'"><span class="si si-kofi"></span><span>Ko-Fi</span></button>
+            <button class="email" onclick="location.href='mailto:jemma@jemsoftware.dev'"><span class="si si-gmail"></span><span>Email</span></button>
+            <!--<button class="matrix" onclick="location.href='https://matrix.to/#/@jemma:jemverse.xyz'"><span class="si si-matrix"></span><span>Matrix</span></button>-->
+            <button class="twitter" onclick="location.href='https://twitter.com/JemTanuki'"><span class="si si-twitter"></span><span>Twitter</span></button>
+            <button class="mastodon" onclick="location.href='https://mastodon.jemverse.xyz/@Jemma'"><span class="si si-mastodon"></span><span>Mastodon</span></button>
+            <button class="telegram" onclick="location.href='https://t.me/JemTanuki'"><span class="si si-telegram"></span><span>Telegram</span></button>
+            <button class="discord"><span class="si si-discord"></span><span>Jemma#6508</span></button>
+            <button class="github" onclick="location.href='https://github.com/CaramelKat'"><span class="si si-github"></span><span>GitHub</span></button>
         </div>
+    </div>
+    </div>
+    <div class="content">
+        <h3>Copyright 2022 - Jemma Poffinbarger</h3>
     </div>
 </body>
 </html>
