Fixed issues with header on mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="about-me">
         <h2>About Me</h2>
         <div class="content">
-            <img class="user-icon" src="https://www.github.com/caramelkat.png">
+            <img class="user-icon" src="https://www.github.com/caramelkat.png" alt="">
             <div class="description">
                 <h2>Howdy! My name is Jemma!</h2>
                 <p>
