Added SEO data.

--- a/90s.html
+++ b/90s.html
@@ -45,8 +45,13 @@
             <div class="window-body">
                 <ul class="tree-view">
                     <img class="user-icon" src="images/usericon.jpg">
-                    <p>Howdy! My name is Jemma, I'm a 3rd year computer science student at the <b><a href="https://uwplatt.edu/">University of Wisconsin: Platteville</a></b></p>
-                    <p>I'm a software researcher and backend developer. I specialize in the development of dynamic web apps and the reverse engineering of niche applications.</p>
+                    <br>
+                    <b>Howdy! My name is Jemma!</b>
+                    <br>
+                    I'm a full-stack developer currently attending the <b><a href="https://uwplatt.edu/"> University of Wisconsin: Platteville.</a></b>
+                    Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.
+                    <br><br>
+                    While most of my work is with web applications, I have experience developing for iOS, Android, Windows, and more.
 
                 </ul>
                 <br>
