--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Jemma Poffinbarger</title>
     <meta charset="UTF-8">
-    <title>Jem's Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Jemma Poffinbarger">
+    <meta property="og:description" content="Howdy! My name is Jemma! I'm a full-stack developer currently attending the University of Wisconsin: Platteville. Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jemsoftware.dev">
+    <meta property="og:site_name" content="Jemma Poffinbarger">
+    <meta name="twitter:url" content="https://jemsoftware.dev/">
+    <meta name="twitter:site" content="@jemtanuki">
+    <meta name="twitter:title" content="Jemma Poffinbarger">
+    <meta name="twitter:description" content="Howdy! My name is Jemma! I'm a full-stack developer currently attending the University of Wisconsin: Platteville. Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.">
+    <meta name="description" content="Howdy! My name is Jemma! I'm a full-stack developer currently attending the University of Wisconsin: Platteville. Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.">
+    <meta name="robots" content="index, follow">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/pfp32.jpg">
+
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v5/font/simple-icons.min.css" type="text/css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -15,7 +28,7 @@
         <a href="#my-projects">Projects</a>
         <a href="#contact-me">Contact me</a>
         <a href="files/Resume.pdf">Resume</a>
-        <a href="90s.html">Old School Mode</a>
+        <a href="90s.html">90's Theme</a>
     </header>
     <div class="background-stripe">
         <div id="about-me">
@@ -49,7 +62,7 @@
             <div class="project" onclick="location.href='https://Tesomas.Camp'">
                 <h3>Tesomas.Camp</h3>
                 <div>
-                    <h4>Progressive Web App for a scout camp with an interactive map, information about activities, and more.</h4>
+                    <h4>Progressive Web App for a scout camp with an interactive map, information about activities, and more</h4>
                     <img src="images/tesomas.png" alt="">
                 </div>
                 <h4><b>HTMl / CSS / PWA</b></h4>
@@ -57,7 +70,7 @@
             <div class="project" onclick="location.href='https://www.github.com/caramelkat/tanukis-stash'">
                 <h3>Tanuki's Stash</h3>
                 <div>
-                    <h4>A e621/e926 client for iOS</h4>
+                    <h4>A native app for browsing the image board site's e621 and e926 on iOS, iPadOS, and macOS</h4>
                     <img src="images/tanuki.png" alt="">
                 </div>
                 <h4><b>Swift / SwiftUI</b></h4>
@@ -65,7 +78,7 @@
             <div class="project" onclick="location.href='https://www.github.com/caramelkat/caramelbot3.0'">
                 <h3>Caramel Bot</h3>
                 <div>
-                    <h4>Basic no nonsense Discord bot</h4>
+                    <h4>Basic, no-nonsense Discord bot for reaction roles and more</h4>
                     <img src="images/caramel.png" alt="">
                 </div>
                 <h4><b>NodeJS / Discord.js / MongoDB</b></h4>
