--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <meta name="description" content="Howdy! My name is Jemma! I'm a full-stack developer currently attending the University of Wisconsin: Platteville. Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.">
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/png" sizes="32x32" href="images/pfp32.jpg">
-
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v5/font/simple-icons.min.css" type="text/css">
+    <script defer data-domain="jemsoftware.dev" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body>
     <header>
