Now tracking outbound clicks

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/pfp32.jpg">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v5/font/simple-icons.min.css" type="text/css">
-    <script defer data-domain="jemsoftware.dev" src="https://plausible.io/js/plausible.js"></script>
+    <script defer data-domain="jemsoftware.dev" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 </head>
 <body>
     <header>
