added mastodon verification link & updated text on 90's site

--- a/90s.html
+++ b/90s.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/90s.css">
     <link rel="stylesheet" href="https://unpkg.com/98.css@0.1.17/dist/98.css"/>
     <script defer data-domain="jemsoftware.dev" src="https://plausible.io/js/plausible.outbound-links.js"></script>
+    <link rel="me" href="https://mastodon.jemverse.xyz/@Jemma">
 </head>
 <body>
 <div>
@@ -101,7 +102,7 @@
                         <details open>
                             <summary><img src="images/tesomas.ico"><a href="https://tesomas.camp" target="_blank"> <b>Tesomas.Camp</b></a></summary>
                             <ul>
-                                <li>PWA for a scout camp with an interactive map, and information about areas and events</li>
+                                <li>Progressive Web App for a scout camp with an interactive map, information about activities, and more</li>
                                 <li><b>HTMl / CSS / PWA</b></li>
                             </ul>
                         </details>
@@ -110,7 +111,7 @@
                         <details open>
                             <summary><img src="images/tanuki.ico"><a href="https://github.com/CaramelKat/Tanukis-Stash" target="_blank"> <b>Tanuki's Stash</b></a></summary>
                             <ul>
-                                <li>A e621/e926 client for iOS</li>
+                                <li>A native app for browsing a furry image board site on iOS, iPadOS, and macOS</li>
                                 <li><b>Swift / SwiftUI</b></li>
                             </ul>
                         </details>
@@ -119,7 +120,7 @@
                         <details open>
                             <summary><img src="images/caramel.ico"><a href="https://github.com/CaramelKat/caramelbot3.0" target="_blank"> <b>Caramel Bot</b></a></summary>
                             <ul>
-                                <li>Basic no nonsense Discord bot</li>
+                                <li>Basic, no-nonsense Discord bot for reaction roles and more</li>
                                 <li><b>NodeJS / Discord.js / MongoDB</b></li>
                             </ul>
                         </details>
