--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/pfp32.jpg">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v5/font/simple-icons.min.css" type="text/css">
+    <link rel="me" href="https://mastodon.jemverse.xyz/@Jemma">
     <script defer data-domain="jemsoftware.dev" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 </head>
 <body>
@@ -70,7 +71,7 @@
             <div class="project" onclick="location.href='https://www.github.com/caramelkat/tanukis-stash'">
                 <h3>Tanuki's Stash</h3>
                 <div>
-                    <h4>A native app for browsing the image board site's e621 and e926 on iOS, iPadOS, and macOS</h4>
+                    <h4>A native app for browsing a furry image board site on iOS, iPadOS, and macOS</h4>
                     <img src="images/tanuki.png" alt="">
                 </div>
                 <h4><b>Swift / SwiftUI</b></h4>
