--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <a href="#my-projects">Projects</a>
         <a href="#contact-me">Contact me</a>
         <a href="files/Resume.pdf">Resume</a>
-        <a href="90s.html">90's Theme</a>
+        <a href="blog.html">Blog</a>
+        <a href="90s.html">Classic Site</a>
     </header>
     <div class="background-stripe">
         <div id="about-me">
