Updated resume. Added link for LinkedIn profile. Tweaked some CSS to fix some visual bugs

--- a/90s.html
+++ b/90s.html
@@ -47,7 +47,7 @@
             </div>
             <div class="window-body">
                 <ul class="tree-view">
-                    <img class="user-icon" src="images/usericon.jpg">
+                    <img class="user-icon" src="https://media-exp1.licdn.com/dms/image/C4D03AQHe87R2FZz0lw/profile-displayphoto-shrink_800_800/0/1652121402928?e=1657756800&v=beta&t=SGZjsJJf6MxH0GzXNWQaQpLPR-TFNp0qM3cM7djCL10">
                     <br>
                     <b>Howdy! My name is Jemma!</b>
                     <br>
@@ -67,6 +67,7 @@
                         <!--<li><img src="images/matrix.ico"><a href="https://matrix.to/#/@jemma:jemverse.xyz"> @jemma@jemverse.xyz</a></li>-->
                         <li><img src="images/twitter.ico"><a href="https://twitter.com/JemTanuki"> @JemTanuki</a></li>
                         <li><img src="images/telegram.ico"><a href="https://t.me/JemTanuki"> @JemTanuki</a></li>
+                        <li><img src="images/linkedin.ico"><a href="https://www.linkedin.com/in/jemma-poffinbarger"> LinkedIn</a></li>
                         <li><img src="images/discord.ico"><a> Jemma#6508</a></li>
                         <li><img src="images/github.ico"><a href="https://github.com/CaramelKat"> CaramelKat</a></li>
                     </ul>
