--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="about-me">
         <h2>About Me</h2>
         <div class="content">
-            <img class="user-icon" src="https://www.github.com/caramelkat.png" alt="">
+            <img class="user-icon" src="https://media-exp1.licdn.com/dms/image/C4D03AQHe87R2FZz0lw/profile-displayphoto-shrink_800_800/0/1652121402928?e=1657756800&v=beta&t=SGZjsJJf6MxH0GzXNWQaQpLPR-TFNp0qM3cM7djCL10" alt="">
             <div class="description">
                 <h2>Howdy! My name is Jemma!</h2>
                 <p>
@@ -90,8 +90,8 @@
     </div>
     <div class="background-stripe">
         <div id="contact-me">
-        <h2>Contact Me</h2>
-        <h4>Wanna get in touch or talk business?</h4>
+            <h2>Contact Me</h2>
+            <h4>Wanna get in touch or talk business?</h4>
         <div class="content">
             <button class="cashapp" onclick="location.href='https://cash.app/$JemTanuki'"><span class="si si-cashapp"></span><span>Cash App</span></button>
             <button class="kofi" onclick="location.href='https://ko-fi.com/jemtanuki'"><span class="si si-kofi"></span><span>Ko-Fi</span></button>
@@ -100,6 +100,7 @@
             <button class="twitter" onclick="location.href='https://twitter.com/JemTanuki'"><span class="si si-twitter"></span><span>Twitter</span></button>
             <button class="mastodon" onclick="location.href='https://mastodon.jemverse.xyz/@Jemma'"><span class="si si-mastodon"></span><span>Mastodon</span></button>
             <button class="telegram" onclick="location.href='https://t.me/JemTanuki'"><span class="si si-telegram"></span><span>Telegram</span></button>
+            <button class="linkedin" onclick="location.href='https://www.linkedin.com/in/jemma-poffinbarger'"><span class="si si-linkedin"></span><span>LinkedIn</span></button>
             <button class="discord"><span class="si si-discord"></span><span>Jemma#6508</span></button>
             <button class="github" onclick="location.href='https://github.com/CaramelKat'"><span class="si si-github"></span><span>GitHub</span></button>
         </div>
