Updated pfp url and added robots.txt to stop crawling of my resume

--- a/90s.html
+++ b/90s.html
@@ -47,7 +47,7 @@
             </div>
             <div class="window-body">
                 <ul class="tree-view">
-                    <img class="user-icon" src="https://media-exp1.licdn.com/dms/image/C4D03AQHe87R2FZz0lw/profile-displayphoto-shrink_800_800/0/1652121402928?e=1657756800&v=beta&t=SGZjsJJf6MxH0GzXNWQaQpLPR-TFNp0qM3cM7djCL10">
+                    <img class="user-icon" src="https://github.com/caramelKat.png">
                     <br>
                     <b>Howdy! My name is Jemma!</b>
                     <br>
