--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="about-me">
         <h2>About Me</h2>
         <div class="content">
-            <img class="user-icon" src="https://media-exp1.licdn.com/dms/image/C4D03AQHe87R2FZz0lw/profile-displayphoto-shrink_800_800/0/1652121402928?e=1657756800&v=beta&t=SGZjsJJf6MxH0GzXNWQaQpLPR-TFNp0qM3cM7djCL10" alt="">
+            <img class="user-icon" src="https://github.com/caramelKat.png" alt="">
             <div class="description">
                 <h2>Howdy! My name is Jemma!</h2>
                 <p>
