Updated mastodon links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/pfp32.jpg">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v5/font/simple-icons.min.css" type="text/css">
-    <link rel="me" href="https://mastodon.jemverse.xyz/@Jemma">
+    <link rel="me" href="https://chitter.xyz/@Jemma">
     <script defer data-domain="jemsoftware.dev" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 </head>
 <body>
@@ -98,7 +98,7 @@
             <button class="email" onclick="location.href='mailto:jemma@jemsoftware.dev'"><span class="si si-gmail"></span><span>Email</span></button>
             <!--<button class="matrix" onclick="location.href='https://matrix.to/#/@jemma:jemverse.xyz'"><span class="si si-matrix"></span><span>Matrix</span></button>-->
             <button class="twitter" onclick="location.href='https://twitter.com/JemTanuki'"><span class="si si-twitter"></span><span>Twitter</span></button>
-            <button class="mastodon" onclick="location.href='https://mastodon.jemverse.xyz/@Jemma'"><span class="si si-mastodon"></span><span>Mastodon</span></button>
+            <button class="mastodon" onclick="location.href='https://chitter.xyz/@Jemma'"><span class="si si-mastodon"></span><span>Mastodon</span></button>
             <button class="telegram" onclick="location.href='https://t.me/JemTanuki'"><span class="si si-telegram"></span><span>Telegram</span></button>
             <button class="linkedin" onclick="location.href='https://www.linkedin.com/in/jemma-poffinbarger'"><span class="si si-linkedin"></span><span>LinkedIn</span></button>
             <button class="discord"><span class="si si-discord"></span><span>Jemma#6508</span></button>
