--- a/90s.html
+++ b/90s.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/90s.css">
     <link rel="stylesheet" href="https://unpkg.com/98.css@0.1.17/dist/98.css"/>
     <script defer data-domain="jemsoftware.dev" src="https://plausible.io/js/plausible.outbound-links.js"></script>
-    <link rel="me" href="https://mastodon.jemverse.xyz/@Jemma">
+    <link rel="me" href="https://chitter.xyz/@Jemma">
 </head>
 <body>
 <div>
